<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gif_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/gif">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/about_developer"
                style="@style/AboutTextView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.widget.IconTextView
                    android:id="@+id/coffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-coffee}"
                    android:textColor="@android:color/white"
                    android:textSize="45sp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/about_author_name"
                        android:textStyle="bold"
                        style="@style/AboutTextView"/>

                    <TextView
                        android:text="@string/about_author_email"
                        android:autoLink="email"
                        style="@style/AboutTextView"/>

                    <TextView
                        android:text="@string/about_author_phone"
                        android:autoLink="phone"
                        style="@style/AboutTextView"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/about_free_software"
                style="@style/AboutTextView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.widget.IconTextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-github-square}"
                    android:textColor="@android:color/white"
                    android:textSize="45sp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/about_source_code_github"
                        android:textStyle="bold"
                        style="@style/AboutTextView"/>

                    <TextView
                        android:text="@string/about_github_repo_url"
                        android:autoLink="web"
                        style="@style/AboutTextView"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/loading_gif"/>

</RelativeLayout>